# aws-terraform-sandbox

./: .gitignore  README.md  pyproject.toml
.aira/: config.dev.commit.yml
.github/disabled-workflows/: publish-to-pypi.yml
.github/release_notes/: .sourcesage_releasenotes_iris.yml
.github/scripts/: generate_header_image.py
.harmon_ai/: README_template.md  repository_summary_raw.md  sections_template_llm.md
docs/: IAL_REQUIREMENTS_STREAMLIT_FARGATE_DEPLOYMENT.MD  IAL_REQUIREMENTS_STREAMLIT_FARGATE_DEPLOYMENT_V2_MODULAR.MD  IAL_REQUIREMENTS_STREAMLIT_FARGATE_DEPLOYMENT_V2_SCHEDULED.MD  README.en.md  REQUIREMENTS_DEFINITION.md  TERRAFORM_AWS_REQUI.mdREMENTS_DEFINITION  TERRAFORM_VIS_REQ_SPEC.md
sandbox/: README.md
sandbox/s01_streamlit_aws_setup/: streamlit_aws_setup.tf  terraform.tfstate
sandbox/s02_streamlit_aws_deployer/: README.md  main.tf  terraform.tfstate  terraform.tfvars  variables.tf
sandbox/s03_ec2_aws_visual/: Dockerfile  README.md  aws-infrastructure-diagram.py  aws_terraform_visualizer3.py  docker-compose.yml  main.tf  terraform.tfvars  terraform_vis_prompt_generator.py  variables.tf
sandbox/s04_lambda/: client.py
sandbox/s04_simple_lambda/: README.md  main.tf  terraform.tfvars  variables.tf
sandbox/s05_api_lambda/: README.md  client.py  main.tf  variables.tf
sandbox/s06_fastapi_lambda/: .dockerignore  .env.example  Dockerfile  README.md  app.py  client.py  client2.py  lambda_tester_api.py  lambda_tester_local.py  main.tf  requirements.txt  terraform.tfvars  variables.tf
sandbox/s07_simple_sso/: README.md  main.tf  variables.tf  (+1 more)
(+84 files in other folders)
